--- a/A1/main.ipynb
+++ b/A1/main.ipynb
@@ -258,18 +258,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rho for the whole system: 1.297743\n",
-      "L for the whole system: 15.107241\n",
-      "W for the whole system: 0.840151\n",
-      "W_Q for the whole system: 0.027651\n",
-      "L_Q for the whole system: 0.419741\n"
+      "rho for the whole system: System is utilized 1.297743 of the time\n",
+      "P0 for the whole system: System is not utilized 0.331759 of the time\n",
+      "L for the whole system: Avg. 15.11 people are the system\n",
+      "W for the whole system: Avg. Time spent the system is 0.840151 hours\n",
+      "W_Q for the whole system: Avg. Time spent in queue 0.027651 hours\n",
+      "L_Q for the whole system: Avg. 0.42 people are in the queue\n"
      ]
     }
    ],
@@ -287,20 +288,25 @@
     "\n",
     "    return leftSide + rightSide\n",
     "\n",
+    "\n",
     "rho_system = weighted_average(rho_cardio, rho_free_weight, rho_cable, rho_weight_machine)\n",
-    "print(f\"rho for the whole system: {rho_system:.6f}\")\n",
+    "print(f\"rho for the whole system: System is utilized {rho_system:.6f} of the time\")\n",
+    "\n",
+    "P0_system = weighted_average(P0_cardio, P0_free_weight, P0_cable, P0_weight_machine)\n",
+    "print(f\"P0 for the whole system: System is not utilized {P0_system:.6f} of the time\")\n",
     "\n",
     "L_system = weighted_average(L_cardio, L_free_weight, L_cable, L_weight_machine)\n",
-    "print(f\"L for the whole system: {L_system:.6f}\")\n",
+    "print(f\"L for the whole system: Avg. {L_system:.2f} people are the system\")\n",
     "\n",
     "W_system = weighted_average(W_cardio, W_free_weight, W_cable, W_weight_machine)\n",
-    "print(f\"W for the whole system: {W_system:.6f}\")\n",
+    "print(f\"W for the whole system: Avg. Time spent the system is {W_system:.6f} hours\")\n",
     "\n",
     "W_Q_system = weighted_average(W_Q_cardio, W_Q_free_weight, W_Q_cable, W_Q_weight_machine)\n",
-    "print(f\"W_Q for the whole system: {W_Q_system:.6f}\")\n",
+    "print(f\"W_Q for the whole system: Avg. Time spent in queue {W_Q_system:.6f} hours\")\n",
     "\n",
     "L_Q_system = weighted_average(L_Q_cardio, L_Q_free_weight, L_Q_cable, L_Q_weight_machine)\n",
-    "print(f\"L_Q for the whole system: {L_Q_system:.6f}\")"
+    "print(f\"L_Q for the whole system: Avg. {L_Q_system:.2f} people are in the queue\")\n",
+    "\n"
    ]
   }
  ],
